[gd_scene load_steps=3 format=3 uid="uid://dbq1olpjwj3my"]

[ext_resource type="Script" uid="uid://cmnjk8l0jxf6s" path="res://snake_skin_displayer.gd" id="1_jct2l"]
[ext_resource type="Script" uid="uid://qojoq5kgd0qk" path="res://scenes/snake_skin_displayer/snake_turn.gd" id="2_ys4mb"]

[node name="SnakeSkinDisplayer" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -24.0
offset_right = 108.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(72, 48)
script = ExtResource("1_jct2l")

[node name="SnakeTurn" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
script = ExtResource("2_ys4mb")

[node name="SnakeTail" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 0
offset_top = 48.0
offset_right = 48.0
offset_bottom = 96.0
pivot_offset = Vector2(12, 12)
script = ExtResource("2_ys4mb")

[node name="SnakeStraight" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 0
offset_left = 48.0
offset_right = 96.0
offset_bottom = 48.0
rotation = 1.5708
pivot_offset = Vector2(24, 24)
script = ExtResource("2_ys4mb")

[node name="SnakeHead" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 0
offset_left = 96.0
offset_right = 144.0
offset_bottom = 48.0
rotation = 1.5708
pivot_offset = Vector2(12, 12)
script = ExtResource("2_ys4mb")
